name:                mwalk
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable mwalk
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       array,
                       split,
                       containers,
                       random,
                       matrix
